--- a/index.html
+++ b/index.html
@@ -4,24 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
         <h1>Library</h1>
-        <form action="" method="post">
+        <button id="new-book">New Book</button>
+        <form action="" method="post" id="new-book-form">
             <label for="title">Title:</label>
-            <input type="text" name="title" id="title" placeholder="Title">
+            <input type="text" name="title" id="title" placeholder="Title" required>
             
             <label for="author">Author:</label>
-            <input type="text" name="author" id="author" placeholder="Author">
+            <input type="text" name="author" id="author" placeholder="Author" required>
             
             <label for="pages">Pages:</label>
-            <input type="number" name="pages" id="pages" placeholder="Pages">
+            <input type="number" name="pages" id="pages" placeholder="Pages" required>
 
-            <label for="read">Read:</label>
+            <label for="read">Status:</label>
             <input type="checkbox" name="read" id="read">
 
-            <button type="submit" id="add-book">Add a Book</button>
+            <button type="submit" id="add-book">Add Book</button>
         </form>
     </div>
 
